--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,12 +24,12 @@
                                         <div class="cols-sm-10">
                                             <div class="input-group">
                                                 <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                                                <input type="text" class="form-control" name="email" id="email" placeholder="Enter your Email" />
+                                                <input type="email" class="form-control" name="email" id="email" placeholder="Enter your Email" />
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="location" class="cols-sm-2 control-label">YourLocation</label>
+                                        <label for="location" class="cols-sm-2 control-label">Your Location</label>
                                         <div class="cols-sm-10">
                                             <div class="input-group">
                                                 <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
